formatting userportal code

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{#placeholder "favicon"}}
-        <link rel="shortcut icon" href="{{public "images/default-favicon.png"}}" type="image/png"/>
+        <link rel="shortcut icon" href="{{public "images/favicon.png"}}" type="image/png"/>
     {{/placeholder}}
     <title>{{#placeholder "title"}}UUF Foundation{{/placeholder}}</title>
     {{placeholder "css"}}
