--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-complete.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-complete.hbs
@@ -26,7 +26,8 @@
                     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                         <div class="brand-container add-margin-bottom-5x">
                             <div class="row">
-                                <div class="col-xs-6 col-sm-3 col-md-9 col-lg-9 center-block float-remove-sm float-remove-xs pull-right-md pull-right-lg">
+                                <div class="col-xs-6 col-sm-3 col-md-9 col-lg-9 center-block float-remove-sm
+                                float-remove-xs pull-right-md pull-right-lg">
                                     <img class="img-responsive brand-spacer" src="{{public "images/logo-white.png"}}"
                                          alt="wso2-logo">
                                 </div>
@@ -37,17 +38,17 @@
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 login">
                         <div class="data-container">
                             <form class="form-horizontal">
-                            <h3>{{t "password.recovery"}}</h3>
+                                <h3>{{t "password.recovery"}}</h3>
 
-                            <p>{{t "recovery.email.completed"}}</p>
+                                <p>{{t "recovery.email.completed"}}</p>
 
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <a href="{{@contextPath}}/" class="add-margin-top-2x">{{t
-                                    "applications.breadcrumb"}}</a>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <a href="{{@contextPath}}/" class="add-margin-top-2x">{{t
+                                        "applications.breadcrumb"}}</a>
+                                    </div>
                                 </div>
-                            </div>
-                                </form>
+                            </form>
                         </div>
                     </div>
                 </div>
