--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-question-answer/security-question-answer.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-question-answer/security-question-answer.hbs
@@ -1,14 +1,11 @@
 {{log this}}
-
 <div class="recover-option-container">
-    {{#each @params.questions}}
+    {{#each userQuestions}}
         <div class="form-group add-margin-bottom-5x">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <label class="control-label">{{t "question"}}</label>
                 <p>{{question}}</p>
             </div>
-        <!--</div>-->
-        <!--<div class="form-group">-->
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                 <label for="input-sec-question" class="control-label">{{t "answer"}}</label>
                 <input type="text" class="form-control" id="input-sec-question">
