--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
@@ -26,7 +26,8 @@
                     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                         <div class="brand-container add-margin-bottom-5x">
                             <div class="row">
-                                <div class="col-xs-6 col-sm-3 col-md-9 col-lg-9 center-block float-remove-sm float-remove-xs pull-right-md pull-right-lg">
+                                <div class="col-xs-6 col-sm-3 col-md-9 col-lg-9 center-block float-remove-sm
+                                float-remove-xs pull-right-md pull-right-lg">
                                     <img class="img-responsive brand-spacer" src="{{public "images/logo-white.png"}}"
                                          alt="wso2-logo">
                                 </div>
@@ -36,7 +37,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 login">
                         <div class="data-container">
-                            <form class="form-horizontal">
+                            <form class="form-horizontal" method="post">
                                 <h3>{{t "password.recovery.for"}} <span
                                         class="username-text"><i>{{@queryParams.username}}</i></span></h3>
                                 {{#if hasMultipleOptions}}
@@ -45,7 +46,7 @@
                                     <div class="form-group add-margin-top-5x">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <label class="custom-radio">
-                                                <input type="radio" name="recover-option-email">
+                                                <input type="radio" name="recover-option">
                                                 <span class="helper">{{t "password.recovery.with.email"}}</span>
                                             </label>
 
@@ -59,9 +60,11 @@
                                                 <div class="form-group add-margin-top-5x">
                                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                                         <button type="submit" id="pwd-recover-email"
-                                                                class="btn btn-default btn-primary add-margin-right-2x">{{t "recover"}}</button>
+                                                                class="btn btn-default btn-primary
+                                                                add-margin-right-2x">{{t "recover"}}</button>
                                                         <button type="submit" id="pwd-recover-cancel"
-                                                                class="btn btn-default btn-secondary hidden-xs hidden-sm">{{t "cancel"}}</button>
+                                                                class="btn btn-default btn-secondary hidden-xs
+                                                                hidden-sm">{{t "cancel"}}</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -70,18 +73,32 @@
                                     <div class="form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <label class="custom-radio">
-                                                <input type="radio" name="recover-option-question">
-                                                <span class="helper">{{t "password.recovery.with.security.questions"}}</span>
+                                                <input type="radio" name="recover-option">
+                                                <span class="helper">{{t "password.recovery.with.security.questions"}}
+                                                </span>
                                             </label>
-                                            {{defineZone "question"}}
+                                            {{#if hasUserQuestions}}
+                                                {{fragment "security-question-answer"}}
+                                            {{!defineZone "question"}}
+                                            {{else}}
+                                                <div class="recover-option-container">
+                                                    <div class="form-group add-margin-bottom-5x">
+                                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                                            <div class="form-horizontal">
+                                                                <p>{{t "no.recovery.questions.answered"}}</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            {{/if}}
                                         </div>
                                     </div>
                                 {{/if}}
                             </form>
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <a href="{{@contextPath}}/recovery/password" class="add-margin-top-2x">{{t
-                                    "try.with.another.username"}}</a>
+                                    <a href="{{@contextPath}}/recovery/password" class="add-margin-top-2x">
+                                        {{t "try.with.another.username"}}</a>
                                 </div>
                             </div>
                         </div>
