--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
@@ -28,7 +28,8 @@
                     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
                         <div class="brand-container add-margin-bottom-5x">
                             <div class="row">
-                                <div class="col-xs-6 col-sm-3 col-md-9 col-lg-9 center-block float-remove-sm float-remove-xs pull-right-md pull-right-lg">
+                                <div class="col-xs-6 col-sm-3 col-md-9 col-lg-9 center-block float-remove-sm
+                                float-remove-xs pull-right-md pull-right-lg">
                                     <img class="img-responsive brand-spacer" src="{{public "images/logo-white.png"}}"
                                          alt="wso2-logo">
                                 </div>
@@ -46,8 +47,9 @@
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                             <label for="input-email"
                                                    class="control-label">{{t "profile.username"}}</label>
-                                            <input type="text" name="username" class="form-control" id="input-username" placeholder="{{t
-                                            "enter.your.username"}}" required>
+                                            <input type="text" name="username" class="form-control"
+                                                   id="input-username" placeholder="{{t "enter.your.username"}}"
+                                                   required>
                                         </div>
                                     </div>
                                     <div class="form-group">
