Password Recovery Implementation: Initial

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -81,9 +81,9 @@
                                     <!--<button type="submit" class="btn btn-default btn-secondary hidden-xs hidden-sm">Go Back</button>-->
                                 </div>
                             </div>
-                            <!--not yet implemented-->
-                            <!--<a href="{{@contextPath}}/recover-password" class="add-margin-bottom-5x remove-margin-lg remove-margin-md">Forgot Password</a>-->
-                            <p class="hidden-xs hidden-sm">{{t "signup.message"}}<a
+                            <a href="{{@contextPath}}/recovery/password" class="add-margin-bottom-5x remove-margin-lg
+                            remove-margin-md">{{t "user-portal.user.forgot.password"}}</a>
+                            <p class="hidden-xs hidden-sm">{{t "user-portal.user.signup.message"}}<a
                                     href="{{@contextPath}}/signup">
                                 &nbsp;{{t "signup.title"}}</a>
                             </p>
