--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
@@ -518,3 +518,15 @@ label.error {
 .edit-icon {
     color: #bfbfbf;
 }
+.username-text, .question-no {
+    color:#555;
+}
+.dark .username-text, .dark .question-no {
+    color:#eee;
+}
+.recover-option-container hr{
+    border: 1px solid #fff;
+}
+.dark .recover-option-container hr{
+    border: 1px solid #2E2A2B;
+}
