--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -1,4 +1,4 @@
-{{fragment "org.wso2.carbon.uuf.common.foundation.jquery-validation"}}
+{{fragment "org.wso2.carbon.uuf.common.foundation.ui.jquery-validation"}}
 {{js "js/profile.js"}}
 <h3 class="text-capitalize">{{profile}} {{t "profile"}}</h3>
 <hr/>
