--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -1,7 +1,7 @@
 {{layout "privilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Account Settings | " @config.appName}}
-{{fragment "org.wso2.carbon.uuf.common.foundation.jquery-validation" }}
+{{fragment "org.wso2.carbon.uuf.common.foundation.ui.jquery-validation" }}
 {{js "js/account-setting.js"}}
 {{css "css/user-portal.css"}}
 
@@ -16,15 +16,15 @@
 
 {{#fillZone "modal"}}
     {{
-    fragment "org.wso2.carbon.uuf.common.foundation.modal"
-         id="deleteModal"
-         class=""
-         modalTitle=(t "modal.delete.header")
-         modalBody=(t "modal.delete.security.question.content")
-         modalFooter=""
-         primaryButton="Yes"
-         secondaryButton="Cancel"
-         dismissButton=true
+    fragment "org.wso2.carbon.uuf.common.foundation.ui.modal"
+             id="deleteModal"
+             class="additional-class"
+             modalTitle="Are you sure you want to delete ?"
+             modalBody="Are you sure you want to delete ?"
+             modalFooter=""
+             primaryButton="Yes"
+             secondaryButton="Cancel"
+             dismissButton=true
     }}
 {{/fillZone}}
 
