formating and update i18n keys

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -82,8 +82,8 @@
                                 </div>
                             </div>
                             <a href="{{@contextPath}}/recovery/password" class="add-margin-bottom-5x remove-margin-lg
-                            remove-margin-md">{{t "user-portal.user.forgot.password"}}</a>
-                            <p class="hidden-xs hidden-sm">{{t "user-portal.user.signup.message"}}<a
+                            remove-margin-md">{{t "forgot.password"}}</a>
+                            <p class="hidden-xs hidden-sm">{{t "signup.message"}}<a
                                     href="{{@contextPath}}/signup">
                                 &nbsp;{{t "signup.title"}}</a>
                             </p>
