--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-complete.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-complete.hbs
@@ -9,7 +9,7 @@
 {{#fillZone "content"}}
     {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>{{t "user-portal.user.password.recovery.error"}}</strong>
+            <i class="icon fw fw-error"></i><strong>{{t "password.recovery.error"}}</strong>
             {{errorMessage}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
             <span aria-hidden="true">
