--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
@@ -9,7 +9,7 @@
 {{#fillZone "content"}}
     {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>{{t "user-portal.user.password.recovery.error"}}</strong>
+            <i class="icon fw fw-error"></i><strong>{{t "password.recovery.error"}}</strong>
             {{t errorMessage}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
             <span aria-hidden="true">
@@ -41,7 +41,7 @@
                                 <h3>{{t "password.recovery.for"}} <span
                                         class="username-text"><i>{{@queryParams.username}}</i></span></h3>
                                 {{#if hasMultipleOptions}}
-                                    <p>{{t "user-portal.user.password.recovery.select.options"}}</p>
+                                    <p>{{t "password.recovery.select.options"}}</p>
 
                                     <div class="form-group add-margin-top-5x">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -53,7 +53,7 @@
                                             <div class="recover-option-container">
                                                 <div class="form-group">
                                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                                        <label class="control-label">{{t "user-portal.captcha"}}</label>
+                                                        <label class="control-label">{{t "captcha"}}</label>
                                                         <img width="100%" src="images/captcha.jpg">
                                                     </div>
                                                 </div>
