--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
@@ -9,7 +9,7 @@
 {{#fillZone "content"}}
     {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>{{t "user-portal.user.password.recovery.error"}}</strong>
+            <i class="icon fw fw-error"></i><strong>{{t "password.recovery.error"}}</strong>
             <span>{{t errorMessage}}
                 <!--<br/>{{t "Provided username "}}{{username}}-->
             </span>
@@ -41,7 +41,7 @@
                         <div class="data-container">
                             {{#if isPasswordRecoveryEnabled}}
                                 <form class="form-horizontal" method="post">
-                                    <h3>{{t "user-portal.user.password.recovery"}}</h3>
+                                    <h3>{{t "password.recovery"}}</h3>
 
                                     <div class="form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
@@ -55,20 +55,20 @@
                                     <div class="form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                             <button type="submit" id="input-recovery-btn" class="btn btn-default
-                                            btn-primary add-margin-right-2x">{{t "user-portal.user.next"}}</button>
+                                            btn-primary add-margin-right-2x">{{t "next"}}</button>
                                         </div>
                                     </div>
                                 </form>
                             {{else}}
                                 <div>
-                                    <h3>{{t "user-portal.user.password.recovery"}}</h3>
+                                    <h3>{{t "password.recovery"}}</h3>
 
-                                    <p>{{t "user-portal.user.recovery.not.enabled"}}</p>
+                                    <p>{{t "recovery.not.enabled"}}</p>
 
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                            <a href="{{@contextPath}}/" class="add-margin-top-2x">{{t
-                                            "user-portal.applications.breadcrumb"}}</a>
+                                            <a href="{{@contextPath}}/" class="add-margin-top-2x">
+                                                {{t "applications.breadcrumb"}}</a>
                                         </div>
                                     </div>
                                 </div>
