--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
@@ -515,6 +515,18 @@ label.error {
     width: 30px;
 }
 
+.username-text, .question-no {
+    color:#555;
+}
+.dark .username-text, .dark .question-no {
+    color:#eee;
+}
+.recover-option-container hr{
+    border: 1px solid #fff;
+}
+.dark .recover-option-container hr{
+    border: 1px solid #2E2A2B;
+}
 .edit-icon {
     color: #bfbfbf;
 }
