Changed uuf version to 1.0.0-m12 and added necessary modifications

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -1,10 +1,10 @@
 {{js "js/reset-password.js"}}
 
-<h3>{{t "password.reset"}}</h3>
+<h3>{{i18n "password.reset"}}</h3>
 <hr/>
 <div class="message message-info">
-    <h4><i class="icon fw fw-info"></i>{{t "password.info.header"}}</h4>
-    <p>{{t "password.info.body"}}</p>
+    <h4><i class="icon fw fw-info"></i>{{i18n "password.info.header"}}</h4>
+    <p>{{i18n "password.info.body"}}</p>
 </div>
 {{#if success}}
     <div class="alert alert-success alert-dismissible fade in" role="alert">
@@ -19,13 +19,13 @@
 
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-            <label class="control-label" for="oldPassword">{{t "password.reset.old"}}<span>*</span></label>
+            <label class="control-label" for="oldPassword">{{i18n "password.reset.old"}}<span>*</span></label>
             <input type="password" name="oldPassword" id="oldPassword" class="form-control" required/>
         </div>
     </div>
     <div class="form-group password_strength_meter " >
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-            <label class="control-label" for="newPassword">{{t "password.reset.new"}}<span>*</span></label>
+            <label class="control-label" for="newPassword">{{i18n "password.reset.new"}}<span>*</span></label>
             <input type="password" name="newPassword" id="newPassword" class="form-control" required data-schemaformat="password"/>
 
             <div id="password_strength_wrap">
@@ -47,7 +47,7 @@
     </div>
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-            <label class="control-label" for="confirmPassword">{{t "password.reset.new.confirm"}}<span>*</span></label>
+            <label class="control-label" for="confirmPassword">{{i18n "password.reset.new.confirm"}}<span>*</span></label>
             <input type="password" name="confirmPassword" id="confirmPassword" name="confirmPassword" class="form-control" required />
         </div>
     </div>
