--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
@@ -50,7 +50,7 @@
 <footer class="footer">
     <div class="container-fluid">
         <p>
-            {{t "footer.content"}} | &copy;
+            {{i18n "footer.content"}} | &copy;
             <script>document.write((new Date().getFullYear()).toString());</script>
             <a href="http://wso2.com/" target="_blank"><i class="icon fw fw-wso2"></i> Inc</a>.
         </p>
