--- a/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/index.hbs
+++ b/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/index.hbs
@@ -1,7 +1,7 @@
 {{layout "org.wso2.carbon.uuf.is.foundation.main"}}
 {{title "Home | " @config.appName}}
 {{#fillZone "content"}}
-    <h3>{{t "user.portal.title"}}</h3>
+    <h3>{{i18n"user.portal.title"}}</h3>
     <hr />
     <p>User portal user stories.</p>
     <ul>
