--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-question-answer/security-question-answer.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-question-answer/security-question-answer.hbs
@@ -3,11 +3,11 @@
     {{#each userQuestions}}
         <div class="form-group add-margin-bottom-5x">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <label class="control-label">{{t "question"}}</label>
+                <label class="control-label">{{i18n "question"}}</label>
                 <p>{{question}}</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                <label for="input-sec-question" class="control-label">{{t "answer"}}</label>
+                <label for="input-sec-question" class="control-label">{{i18n "answer"}}</label>
                 <input type="text" class="form-control" id="input-sec-question">
             </div>
         </div>
@@ -15,9 +15,9 @@
     <div class="form-group add-margin-top-5x">
         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
             <button type="submit"
-                    class="btn btn-default btn-primary add-margin-right-2x">{{t "recover"}}</button>
+                    class="btn btn-default btn-primary add-margin-right-2x">{{i18n "recover"}}</button>
             <button type="submit"
-                    class="btn btn-default btn-secondary hidden-xs hidden-sm">{{t "cancel"}}</button>
+                    class="btn btn-default btn-secondary hidden-xs hidden-sm">{{i18n "cancel"}}</button>
         </div>
     </div>
 </div>
