--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
@@ -8,7 +8,7 @@
         <ol class="breadcrumb">
             <li>
                 <a href="/user-portal"><i class="icon fw fw-home"></i>
-                <span class="hidden-xs">{{t "applications.breadcrumb"}}</span></a>
+                <span class="hidden-xs">{{i18n "applications.breadcrumb"}}</span></a>
             </li>
         </ol>
     </div>
@@ -20,11 +20,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="page-header">
-                        <h1>{{t "applications.header"}}</h1>
+                        <h1>{{i18n "applications.header"}}</h1>
                     </div>
                     <div class="message message-info">
-                        <h4><i class="icon fw fw-info"></i>{{t "no-applications.header"}}</h4>
-                        <p>{{t "no-applications.body"}}</p>
+                        <h4><i class="icon fw fw-info"></i>{{i18n "no-applications.header"}}</h4>
+                        <p>{{i18n "no-applications.body"}}</p>
                     </div>
                 </div>
             </div>
