--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
@@ -9,8 +9,8 @@
 {{#fillZone "content"}}
     {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>{{t "password.recovery.error"}}</strong>
-            {{t errorMessage}}
+            <i class="icon fw fw-error"></i><strong>{{i18n "password.recovery.error"}}</strong>
+            {{i18n errorMessage}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
             <span aria-hidden="true">
                 <i class="fw fw-cancel"></i>
@@ -38,22 +38,22 @@
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 login">
                         <div class="data-container">
                             <form class="form-horizontal" method="post">
-                                <h3>{{t "password.recovery.for"}} <span
+                                <h3>{{i18n "password.recovery.for"}} <span
                                         class="username-text"><i>{{@queryParams.username}}</i></span></h3>
                                 {{#if hasMultipleOptions}}
-                                    <p>{{t "password.recovery.select.options"}}</p>
+                                    <p>{{i18n "password.recovery.select.options"}}</p>
 
                                     <div class="form-group add-margin-top-5x">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <label class="custom-radio">
                                                 <input type="radio" name="recover-option">
-                                                <span class="helper">{{t "password.recovery.with.email"}}</span>
+                                                <span class="helper">{{i18n "password.recovery.with.email"}}</span>
                                             </label>
 
                                             <div class="recover-option-container">
                                                 <div class="form-group">
                                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                                        <label class="control-label">{{t "captcha"}}</label>
+                                                        <label class="control-label">{{i18n "captcha"}}</label>
                                                         <img width="100%" src="images/captcha.jpg">
                                                     </div>
                                                 </div>
@@ -61,10 +61,10 @@
                                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                                         <button type="submit" id="pwd-recover-email"
                                                                 class="btn btn-default btn-primary
-                                                                add-margin-right-2x">{{t "recover"}}</button>
+                                                                add-margin-right-2x">{{i18n "recover"}}</button>
                                                         <button type="submit" id="pwd-recover-cancel"
                                                                 class="btn btn-default btn-secondary hidden-xs
-                                                                hidden-sm">{{t "cancel"}}</button>
+                                                                hidden-sm">{{i18n "cancel"}}</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -74,7 +74,7 @@
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <label class="custom-radio">
                                                 <input type="radio" name="recover-option">
-                                                <span class="helper">{{t "password.recovery.with.security.questions"}}
+                                                <span class="helper">{{i18n "password.recovery.with.security.questions"}}
                                                 </span>
                                             </label>
                                             {{#if hasUserQuestions}}
@@ -85,7 +85,7 @@
                                                     <div class="form-group add-margin-bottom-5x">
                                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                                             <div class="form-horizontal">
-                                                                <p>{{t "no.recovery.questions.answered"}}</p>
+                                                                <p>{{i18n "no.recovery.questions.answered"}}</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -98,7 +98,7 @@
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                     <a href="{{@contextPath}}/recovery/password" class="add-margin-top-2x">
-                                        {{t "try.with.another.username"}}</a>
+                                        {{i18n "try.with.another.username"}}</a>
                                 </div>
                             </div>
                         </div>
