--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
@@ -9,9 +9,9 @@
 {{#fillZone "content"}}
     {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>{{t "password.recovery.error"}}</strong>
-            <span>{{t errorMessage}}
-                <!--<br/>{{t "Provided username "}}{{username}}-->
+            <i class="icon fw fw-error"></i><strong>{{i18n "password.recovery.error"}}</strong>
+            <span>{{i18n errorMessage}}
+                <!--<br/>{{i18n "Provided username "}}{{username}}-->
             </span>
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
             <span aria-hidden="true">
@@ -41,34 +41,34 @@
                         <div class="data-container">
                             {{#if isPasswordRecoveryEnabled}}
                                 <form class="form-horizontal" method="post">
-                                    <h3>{{t "password.recovery"}}</h3>
+                                    <h3>{{i18n "password.recovery"}}</h3>
 
                                     <div class="form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                             <label for="input-email"
-                                                   class="control-label">{{t "profile.username"}}</label>
+                                                   class="control-label">{{i18n "profile.username"}}</label>
                                             <input type="text" name="username" class="form-control"
-                                                   id="input-username" placeholder="{{t "enter.your.username"}}"
+                                                   id="input-username" placeholder="{{i18n "enter.your.username"}}"
                                                    required>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                             <button type="submit" id="input-recovery-btn" class="btn btn-default
-                                            btn-primary add-margin-right-2x">{{t "next"}}</button>
+                                            btn-primary add-margin-right-2x">{{i18n "next"}}</button>
                                         </div>
                                     </div>
                                 </form>
                             {{else}}
                                 <div>
-                                    <h3>{{t "password.recovery"}}</h3>
+                                    <h3>{{i18n "password.recovery"}}</h3>
 
-                                    <p>{{t "recovery.not.enabled"}}</p>
+                                    <p>{{i18n"recovery.not.enabled"}}</p>
 
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <a href="{{@contextPath}}/" class="add-margin-top-2x">
-                                                {{t "applications.breadcrumb"}}</a>
+                                                {{i18n"applications.breadcrumb"}}</a>
                                         </div>
                                     </div>
                                 </div>
