--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
@@ -1,12 +1,12 @@
 {{css "css/security-questions.css"}}
 {{js "js/security-questions.js"}}
 
-<h3>{{t "account.securityQ"}}</h3>
+<h3>{{i18n "account.securityQ"}}</h3>
 <hr/>
 {{#if success}}
     {{#if message}}
         <div class="alert alert-success" role="alert">
-            <i class="icon fw fw-success"></i><strong>{{t "profile.success"}}</strong>
+            <i class="icon fw fw-success"></i><strong>{{i18n "profile.success"}}</strong>
             {{message}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
@@ -18,7 +18,7 @@
 {{else}}
     {{#if message}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>{{t "profile.failure"}}</strong>
+            <i class="icon fw fw-error"></i><strong>{{i18n "profile.failure"}}</strong>
             {{message}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
@@ -88,8 +88,8 @@
 <div id="edit-question">
     <div id="info">
         <div class="message message-info">
-            <h4><i class="icon fw fw-info"></i>{{t "password.info.header"}}</h4>
-            <p>{{t "security.question.info.body"}}</p>
+            <h4><i class="icon fw fw-info"></i>{{i18n "password.info.header"}}</h4>
+            <p>{{i18n "security.question.info.body"}}</p>
         </div>
     </div>
     <form class="form-horizontal" method="post" id="questionUpdateForm" action="?security-questions#security-questions">
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div id="security-question">
-            <label class="control-label">{{t "signup.security.question"}}</label>
+            <label class="control-label">{{i18n "signup.security.question"}}</label>
             <div class="form-group">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div id="current-question"></div>
@@ -110,7 +110,7 @@
             </div>
             <div class="form-group">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-                    <label class="control-label">{{t "signup.security.question.answer"}}</label>
+                    <label class="control-label">{{i18n "signup.security.question.answer"}}</label>
                     <input class="form-control" type="text" id="answer">
                 </div>
             </div>
