--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
@@ -1,5 +1,5 @@
 {{layout "unprivilege"}}
-{{title (t "password.recovery") " | " (t "app.name")}}
+{{title (i18n "password.recovery") " | " (i18n "app.name")}}
 {{css "css/user-portal.css"}}
 {{js "js/script.js"}}
 {{js "js/left-navigation.js"}}
@@ -63,12 +63,12 @@
                                 <div>
                                     <h3>{{i18n "password.recovery"}}</h3>
 
-                                    <p>{{i18n"recovery.not.enabled"}}</p>
+                                    <p>{{i18n "recovery.not.enabled"}}</p>
 
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <a href="{{@contextPath}}/" class="add-margin-top-2x">
-                                                {{i18n"applications.breadcrumb"}}</a>
+                                                {{i18n "applications.breadcrumb"}}</a>
                                         </div>
                                     </div>
                                 </div>
