--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
@@ -1,5 +1,5 @@
 {{layout "unprivilege"}}
-{{title (t "password.recovery") " | " (t "app.name")}}
+{{title (i18n "password.recovery") " | " (i18n "app.name")}}
 {{css "css/user-portal.css"}}
 {{js "js/script.js"}}
 {{js "js/left-navigation.js"}}
