--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/unprivilege.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/unprivilege.hbs
@@ -13,7 +13,7 @@
     {{placeholder "headOther"}}
 </head>
 
-<body class="sticky-footer">
+<body class="sticky-footer background-grey">
 
 <div class="page-content-wrapper">
     <div class="container-fluid">
