--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-options.hbs
@@ -35,6 +35,7 @@
                             <h2 class="text-center-sm text-center-xs text-center-md text-right">{{@config.appName}}</h2>
                         </div>
                     </div>
+
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 login">
                         <div class="data-container">
                             <form class="form-horizontal" method="post">
@@ -46,11 +47,20 @@
                                     <div class="form-group add-margin-top-5x">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <label class="custom-radio">
-                                                <input type="radio" name="recover-option">
+                                                <input type="radio" name="recover-option" value="email-recovery">
                                                 <span class="helper">{{i18n "password.recovery.with.email"}}</span>
                                             </label>
-
-                                            <div class="recover-option-container">
+                                            <label class="custom-radio">
+                                                <input type="radio" name="recover-option"
+                                                       value="security-question-recovery">
+                                                <span class="helper">{{i18n "password.recovery.with.security.questions"}}
+                                                </span>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="form-group recover-option-container">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <div class="email-recovery">
                                                 <div class="form-group">
                                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                                         <label class="control-label">{{i18n "captcha"}}</label>
@@ -62,34 +72,27 @@
                                                         <button type="submit" id="pwd-recover-email"
                                                                 class="btn btn-default btn-primary
                                                                 add-margin-right-2x">{{i18n "recover"}}</button>
-                                                        <button type="submit" id="pwd-recover-cancel"
-                                                                class="btn btn-default btn-secondary hidden-xs
-                                                                hidden-sm">{{i18n "cancel"}}</button>
+                                                        <a href="{{@contextPath}}/" class="hidden-xs hidden-sm">
+                                                            {{i18n "back.to.sign.in"}}</a>
+                                                        <a href="{{@contextPath}}/"
+                                                           class="visible-xs visible-sm add-margin-2x text-center">
+                                                            {{i18n "back.to.sign.in"}}</a>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-group recover-option-container">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                            <label class="custom-radio">
-                                                <input type="radio" name="recover-option">
-                                                <span class="helper">{{i18n "password.recovery.with.security.questions"}}
-                                                </span>
-                                            </label>
-                                            <div class="recover-option-container">
-                                                {{fragment "security-question-answer"}}
+                                            <div class="security-question-recovery">
+                                                <div class="wizard-container">
+                                                    {{fragment "security-question-answer"}}
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 {{/if}}
                             </form>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <a href="{{@contextPath}}/recovery/password" class="add-margin-top-2x">
-                                        {{i18n "try.with.another.username"}}</a>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
