--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password.hbs
@@ -10,9 +10,7 @@
     {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
             <i class="icon fw fw-error"></i><strong>{{i18n "password.recovery.error"}}</strong>
-            <span>{{i18n errorMessage}}
-                <!--<br/>{{i18n "Provided username "}}{{username}}-->
-            </span>
+            <span>{{i18n errorMessage}}</span>
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
             <span aria-hidden="true">
                 <i class="fw fw-cancel"></i>
@@ -43,32 +41,36 @@
                                 <form class="form-horizontal" method="post">
                                     <h3>{{i18n "password.recovery"}}</h3>
 
+                                    <p>{{i18n "enter.your.username"}}</p>
+
                                     <div class="form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                             <label for="input-email"
                                                    class="control-label">{{i18n "profile.username"}}</label>
                                             <input type="text" name="username" class="form-control"
-                                                   id="input-username" placeholder="{{i18n "enter.your.username"}}"
-                                                   required>
+                                                   id="username" required>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                             <button type="submit" id="input-recovery-btn" class="btn btn-default
-                                            btn-primary add-margin-right-2x">{{i18n "next"}}</button>
+                                            btn-primary add-margin-right-2x">{{i18n "continue"}}</button>
+                                            <a href="{{@contextPath}}/" class="hidden-xs hidden-sm">
+                                                {{i18n "back.to.sign.in"}}</a>
+                                            <a href="{{@contextPath}}/"
+                                               class="visible-xs visible-sm add-margin-2x text-center">
+                                                {{i18n "back.to.sign.in"}}</a>
                                         </div>
                                     </div>
                                 </form>
                             {{else}}
                                 <div>
                                     <h3>{{i18n "password.recovery"}}</h3>
-
                                     <p>{{i18n "recovery.not.enabled"}}</p>
-
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <a href="{{@contextPath}}/" class="add-margin-top-2x">
-                                                {{i18n "applications.breadcrumb"}}</a>
+                                                {{i18n "back.to.sign.in"}}</a>
                                         </div>
                                     </div>
                                 </div>
