--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -31,7 +31,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 login">
                     <div class="data-container">
                         <form class="form-horizontal" method="post">
-                            <h3>{{i18n "login"}}</h3>
+                            <h3>{{i18n "login.title"}}</h3>
                             {{#if errorMessage}}
                                 <div class="alert alert-danger" role="alert">
                                     <i class="icon fw fw-error"></i><strong>{{i18n "login.error.default"}}</strong>&nbsp;
@@ -60,16 +60,19 @@
 
                             <div class="form-group">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                    <label for="username" class="control-label">{{i18n "username"}}</label>
+
                                     <div class="input-group input-wrap">
-                                        <input type="text" name="username" class="form-control" placeholder="Username">
+                                        <input type="text" name="username" class="form-control" id="username">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                    <label for="password" class="control-label">{{i18n "passowrd"}}</label>
+
                                     <div class="input-group input-wrap">
-                                        <input type="password" name="password" class="form-control"
-                                               placeholder="Password">
+                                        <input type="password" name="password" class="form-control" id="password">
                                     </div>
                                 </div>
                             </div>
@@ -81,11 +84,14 @@
                                     <!--<button type="submit" class="btn btn-default btn-secondary hidden-xs hidden-sm">Go Back</button>-->
                                 </div>
                             </div>
-                            <a href="{{@contextPath}}/recovery/password" class="add-margin-bottom-5x remove-margin-lg
-                            remove-margin-md">{{i18n "forgot.password"}}</a>
+                            <p>{{i18n "forgot.your"}}&nbsp;<a
+                                    href="{{@contextPath}}/recovery/username">{{i18n "username"}}
+                            </a>&nbsp;{{i18n "or"}}&nbsp;<a href="{{@contextPath}}/recovery/password">
+                                {{i18n "password"}}</a>&nbsp;?
+                            </p>
+
                             <p class="hidden-xs hidden-sm">{{i18n "signup.message"}}<a
-                                    href="{{@contextPath}}/signup">
-                                &nbsp;{{i18n "signup.title"}}</a>
+                                    href="{{@contextPath}}/signup">&nbsp;{{i18n "signup.title"}}</a>
                             </p>
                         </form>
                     </div>
