--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-complete.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-complete.hbs
@@ -45,7 +45,7 @@
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                         <a href="{{@contextPath}}/" class="add-margin-top-2x">{{i18n
-                                        "applications.breadcrumb"}}</a>
+                                        "back.to.sign.in"}}</a>
                                     </div>
                                 </div>
                             </form>
