--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -48,8 +48,11 @@
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                         <input type="hidden" name="domain" id="domain"
                                                class="form-control"/>
+                                        <label for="domainSelector" class="control-label">{{i18n "domain"}}</label>
                                         <select class="form-control" id="domainSelector">
-                                            <option value="default">{{i18n "signup.domain.placeholder"}}</option>
+                                            {{#if primaryDomainName}}
+                                                <option primary={{primaryDomainName}} value={{primaryDomainName}}>{{primaryDomainName}}</option>
+                                            {{/if}}
                                             {{#each domainNames}}
                                                 <option value={{this}}>{{this}}</option>
                                             {{/each}}
