Fixing https://wso2.org/jira/browse/IDENTITY-5616

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -20,7 +20,7 @@
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
             <label class="control-label" for="oldPassword">{{i18n "password.reset.old"}}<span>*</span></label>
-            <input type="password" name="oldPassword" id="oldPassword" class="form-control" required/>
+            <input type="password" name="oldPassword" id="oldPassword" class="form-control" required data-schemaformat="password" />
         </div>
     </div>
     <div class="form-group password_strength_meter " >
@@ -48,7 +48,7 @@
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
             <label class="control-label" for="confirmPassword">{{i18n "password.reset.new.confirm"}}<span>*</span></label>
-            <input type="password" name="confirmPassword" id="confirmPassword" name="confirmPassword" class="form-control" required />
+            <input type="password" name="confirmPassword" id="confirmPassword" name="confirmPassword" class="form-control" required data-schemaformat="password" />
         </div>
     </div>
     <input class="btn btn-primary add-margin-bottom-3x" type="submit" value="Update"/>
